# Remote-Stethoscope

./: .gitignore  .gitmodules  README.md  analog_discovery_steth_listener.dwf3work
2023-Audio/ThinkLabs One/: FFT.ipynb
3D_models/: Diaphragm_Film.ipt  Diaphragm_Ring.ipt  Full_Stethoscope_Body.iam  Full_Stethoscope_Body_2_part_case.dwg  Full_Stethoscope_Body_2_part_case.iam  IC_pin.ipt  Stacked_Case.ipt  Stacked_Case_container.dwg  Stacked_Case_container.ipt  Stacked_Case_handle.dwg  Stacked_Case_handle.ipt  Stacked_Case_handle_and_container.gx  ~Full_Stethoscope_Body.dwg.35000.tmp  ~Full_Stethoscope_Body.dwg.47824.tmp  ~Full_Stethoscope_Body_2_part_case.dwg.47824.tmp  ~Stacked_Case.dwg.35000.tmp  ~Stacked_Case.dwg.47824.tmp  ~Stacked_Case_container.dwg.47824.tmp  ~Stacked_Case_handle.dwg.47824.tmp
3D_models/Fall2022_revision/: Diaphragm_Ring.stl  Full_Stethoscope_Body.dwg  Full_Stethoscope_Body.iam  Full_Stethoscope_Body_2_part_case.dwg  IC_pin.ipt  Stacked_Case.dwg  Stacked_Case.ipt  Stacked_Case.stl  Stacked_Case_container.ipt  Stacked_Case_container.stl  (+3 more)
Fall2022 Audio Samples/: EffectiveCircuit
MicrocontrollerDriver/: TODO  hello_analog_microphone.uf2  hello_pdm_microphone.uf2  usb_analog_mic.uf2  usb_analog_mic_x64.uf2  usb_microphone.uf2  usb_microphone_compact_pins.uf2  usb_microphone_pdm_vanilla_pins.uf2
MicrocontrollerDriver/analog_usb_microphone/: CMakeLists.txt  Main.c
Spring 2023 documents/: placeholder.me
Spring2022/: CSE453_RemoteStethoscope_BOM.docx  CSE453_RemoteStethoscope_DesignDocument.docx
testAudio/: CMakeLists.txt  main.c
(+171 files in other folders)
